# mem-kernel-rs

./: AGENTS.md  Cargo.toml  README.md
.claude/: settings.local.json
crates/mem-api/: Cargo.toml
crates/mem-api/src/: main.rs  server.rs
crates/mem-api/tests/: integration.rs
crates/mem-api/tests/fixtures/: complex_dialogue_memory.csv
crates/mem-cube/: Cargo.toml
crates/mem-cube/src/: entity_cube.rs  lib.rs  naive.rs
crates/mem-embed/: Cargo.toml
crates/mem-embed/src/: entity_extractor.rs  lib.rs  llm.rs  openai_entity_extractor.rs  reranker.rs
crates/mem-graph/: Cargo.toml
crates/mem-graph/src/: entity_knowledge_graph.rs  lib.rs  memory.rs  sqlite.rs
crates/mem-scheduler/: Cargo.toml
crates/mem-scheduler/src/: lib.rs  memory.rs  trait_.rs
crates/mem-types/: Cargo.toml
crates/mem-types/src/: dto.rs  entity.rs  job.rs  lib.rs  lifecycle.rs  traits.rs
crates/mem-vec/: Cargo.toml
crates/mem-vec/src/: keyword_store.rs  lib.rs
docs/: api-reference.md  configuration.md  quickstart.md  troubleshooting.md
