[package]
name = "mem-api"
version = "0.1.0"
edition = "2021"
description = "REST API (Axum) for MemOS: /product/add, /product/search"
license = "Apache-2.0"

[[bin]]
name = "mem-api"
path = "src/main.rs"

[dependencies]
mem-types = { path = "../mem-types", version = "0.1.0" }
mem-cube = { path = "../mem-cube", version = "0.1.0" }
mem-graph = { path = "../mem-graph", version = "0.1.0" }
mem-vec = { path = "../mem-vec", version = "0.1.0", features = ["qdrant"] }
mem-embed = { path = "../mem-embed", version = "0.1.0" }
mem-scheduler = { path = "../mem-scheduler", version = "0.1.0" }
async-trait = "0.1"
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
mem-embed = { path = "../mem-embed", version = "0.1.0", features = ["test-util"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
csv = "1.3"
